--- a/_placeholder/collection.yml
+++ b/_placeholder/collection.yml
@@ -2,6 +2,7 @@ collections:
   placeholder:
     output: true
     order:
+      - School Canteen Advertisement.md
       - School Bus Advertisement.md
       - School Bus Services.md
       - School Life Memories Our Photo Journal.md
