{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"662"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -77,8 +77,6 @@ links:
         url: /experience/ALP/
       - title: Learning for Life Programme
         url: /experience/LLP/
-      - title: P6 Digital Art Showcase
-        url: /experience/p6-digital-art-showcase/
       - title: P1 K2 Befriender Programme
         url: /experience/p1-k2-befriender-via/
   - title: Partners
@@ -100,7 +98,7 @@ links:
       - title: For Teachers
         url: /useful-links/for-teachers/
       - title: For Vendors
-        url: /useful-links/for-vendors/qtps-canteen/
+        url: /useful-links/for-vendors/https://queenstownpri.moe.edu.sg/web-page-not-available/
       - title: School Calendar of Events
         url: /useful-links/school-calendar/
       - title: Have A Question?
