{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"662"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Engagement Charter.md
       - Overview.md
       - Principal's Message.md
       - Vision Mission Values.md
