{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"662"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,8 @@ links:
         url: /about-us/school-rules-and-expectations/
       - title: School Song
         url: /about-us/school-song/
+      - title: Engagement Charter
+        url: /about-us/engagement-charter/
   - title: Our Staff
     url: /our-staff/overview/
     sublinks:
