--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Overview.md
       - English.md
       - Mother Tongue/.keep
       - Mother Tongue/Overview.md
