--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -9,8 +9,8 @@ collections:
       - Mother Tongue/Chinese.md
       - Mother Tongue/Malay.md
       - Mother Tongue/Tamil.md
-      - Mathematics/.keep
-      - Mathematics/Mathematics Club.md
+      - Mathematics@@/.keep
+      - Mathematics@@/Mathematics Club.md
       - Science.md
       - Physical Education (PE).md
       - Aesthetics/.keep
