{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"662"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,7 +2,7 @@ collections:
   departments:
     output: true
     order:
-      - Overview.md
+      - Mathematics.md
       - English.md
       - Mother Tongue/.keep
       - Mother Tongue/Overview.md
