{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"662"}

--- a/_teaching-staff/collection.yml
+++ b/_teaching-staff/collection.yml
@@ -2,7 +2,7 @@ collections:
   teaching-staff:
     output: true
     order:
-      - Senior Teacher Council.md
+      - Senior Teacher Council 2026.md
       - Form Teachers 2026/.keep
       - Form Teachers 2026/P1 Form Teachers.md
       - Form Teachers 2026/P2 Form Teachers.md
