--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Overview.md
-      - Principal's Message.md
+      - Principal's Foreword.md
       - Vision Mission Values.md
       - School Rules and Expectations.md
       - School Song.md
