{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"662"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ links:
     sublinks:
       - title: Overview
         url: /about-us/
-      - title: Principal's Message
+      - title: Principal's Foreword
         url: /about-us/principals-message/
       - title: Vision Mission Values
         url: /about-us/vision-mission-values/
