{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"662"}

--- a/_co-curricular-activities/collection.yml
+++ b/_co-curricular-activities/collection.yml
@@ -26,4 +26,4 @@ collections:
       - Clubs And Societies/Weiqi Club.md
       - Enrichment Groups/.keep
       - Enrichment Groups/E2K Science.md
-      - Enrichment Groups/Mathematics Club.md
+      - Enrichment Groups/E2K Math.md
